<resources>
    <string name="app_name">Калькулятор</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_div">/</string>
    <string name="button_mul">*</string>
    <string name="button_min">-</string>
    <string name="button_point">.</string>
    <string name="button_equals">=</string>
    <string name="button_c">C</string>
    <string name="button_del"><![CDATA[<-]]></string>
    <string name="action_settings">Настройки</string>
    <string name="select_theme">Выберите тему</string>
    <string name="select_theme1">Тема 1</string>
    <string name="select_theme2">Тема 2</string>
    <string name="div_0">Ошибка - деление на ноль</string>
    <string name="err_parse">Ошибка разбора текста</string>
</resources>
