<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="4"
    android:padding="@dimen/screen_padding"
    android:rowCount="6">

    <ScrollView
        android:id="@+id/scroll_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnSpan="4"
        android:background="@drawable/ic_floral_1751088">

        <TextView
            android:id="@+id/tv_display"
            android:gravity="end|center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tool:text="200+800=1000" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_column="1"
        android:text="@string/button_c"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_del"
        android:text="@string/button_del"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_div"
        style="@style/сalcButton"
        android:text="@string/button_div" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:text="@string/button_7"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:text="@string/button_8"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:text="@string/button_9"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mul"
        android:text="@string/button_mul"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:text="@string/button_4"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:text="@string/button_5"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:text="@string/button_6"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_min"
        android:text="@string/button_min"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:text="@string/button_1"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:text="@string/button_2"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:text="@string/button_3"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        android:text="@string/button_plus"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/button_0"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_point"
        android:text="@string/button_point"
        style="@style/сalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_equals"
        android:text="@string/button_equals"
        style="@style/сalcButton" />
</GridLayout>
